--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "styled-component": "^2.8.0"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
