--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "server": "npx json-server ./data.json --port 8000"
+    "server": "npx json-server ./database.json --port 8000"
   },
   "dependencies": {
     "json-server": "^0.17.0",
@@ -15,7 +15,7 @@
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "styled-component": "^2.8.0"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
