--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "npx json-server ./database.json --port 8000"
   },
   "dependencies": {
+    "date-fns": "^2.29.0",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
